--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -82,6 +82,7 @@
     text-align: left;
 }
 .large-btn b {
+
     display: inline-block;
     width: 85%;
     text-align: center;
@@ -259,7 +260,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <li class="list-group-item"><a href="#a1-6">Formulaires en ligne</a></li>
           <li class="list-group-item"><a href="#a1-7">Travailleurs autonomes</a></li>
           <li class="list-group-item"><a href="#a1-8">Province de résidence</a></li>
-          <li class="list-group-item"><a href="#a1-9">Les erreurs sont possibles</a></li>
+          <li class="list-group-item"><a href="#a1-9">Des erreurs, ça arrive</a></li>
         </ul>
       </div>
       <div class="panel panel-default"> 
@@ -280,22 +281,23 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       </div>
     </div>
     <div class="col-xs-12 col-md-9">
-      <p>Sur cette page, vous pouvez obtenir les renseignements concernant vos  demandes de prestations d&rsquo;assurance-emploi (A.-E.). Vous pouvez également gérer votre  compte&nbsp;: </p>
+      <p>Sur cette page, vous trouverez des renseignements sur votre demande  d&rsquo;assurance-emploi. Vous pouvez également gérer votre compte, en&nbsp;:</p>
       <ul>
-        <li>mettre à jour vos  coordonnées;</li>
-        <li>modifier vos renseignements  concernant le dépôt direct;</li>
-        <li>vous enregistrer pour  recevoir le service d&rsquo;avis par courriel (Alertez-moi).</li>
+        <li>mettant à jour vos coordonnées;</li>
+        <li>modifiant  les renseignements concernant le dépôt direct;</li>
+        <li>vous inscrivant au service d&rsquo;alertes par courriel  (Alertez-moi).</li>
       </ul>
+      
       <section>
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="mrgn-tp-md header-bg">
-              <h2 id="a1-1" class="mrgn-tp-0">Renseignements relatifs à votre dernière demande&nbsp;</h2>
+              <h2 id="a1-1" class="mrgn-tp-0">Renseignements sur votre dernière demande&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
-            <p>En sélectionnant Visualiser l&rsquo;état de ma demande et ma correspondance  (Alertez-moi), vous pouvez vérifier l&rsquo;état de votre dernière demande et vos  messages.</p>
-              <p>Vous pouvez aussi recevoir des avis par courriel si vous vous inscrivez  au service Alertez-moi. </p>
-           <p>Si vous avez une demande active, les sections Dernière demande et  Renseignements de paiements fournissent les détails, notamment la date de  début, le taux de prestations hebdomadaires, le nombre de semaines payées et  les détails des versements.  </p>
+            <p>Quand vous choisissez  Visualiser l&rsquo;état de ma demande et ma correspondance (Alertez-moi), vous pouvez  consulter l&rsquo;état de votre demande et vos derniers messages.</p>
+            <p>Vous pouvez également  recevoir des avis par courriel en vous inscrivant au service Alertez-moi.</p>
+            <p>Si votre demande est  active, les options Dernière demande et Renseignements de paiements affichent  des détails tels que, la date de début, le taux de prestations hebdomadaire, le  nombre de semaines payées et les détails du paiement. </p>
 <div>
   <div> </div>
 </div>
@@ -311,11 +313,10 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="mrgn-tp-md header-bg">
-              <h2 id="a1-2" class="mrgn-tp-0">Visualiser/modifier mes renseignements personnels &nbsp;</h2>
+              <h2 id="a1-2" class="mrgn-tp-0">Visualiser ou modifier mes renseignements personnels&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
-            <br />
-            <p>Dans cette section, vous pouvez vérifier et modifier votre adresse  postale, votre numéro de téléphone, les renseignements pour le dépôt direct et  votre langue de préférence. Les modifications ne peuvent être faites que  directement dans Mon dossier Service Canada – A.-E. pendant les heures d&rsquo;ouverture  de votre province ou territoire.</p>
+            <p>Dans cette section,  vous pouvez consulter ou modifier votre adresse postale, numéro de téléphone,  les renseignements sur le dépôt direct et langue de préférence. <a name="4"></a>Les  changements peuvent être effectués directement dans MDSC-Assurance emploi  seulement pendant les heures de service de votre province ou territoire.</p>
 <details>
               <summary><!--Service times-->Heures d’ouverture de votre province ou territoire</summary>
               <ul>
@@ -340,12 +341,12 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
           </div>
             <br />
-          <p>Dans la section Relevés d&rsquo;emploi (RE), vous pouvez&nbsp;:</p>
+          <p>Dans la section  Relevés d&rsquo;emploi (RE), vous pouvez&nbsp;:</p>
           <ul>
-            <li>Vérifier et imprimer des RE électroniques;</li>
-            <li>Vérifier les renseignements de votre RE papier. </li>
+            <li>consulter et imprimer les RE  électroniques;</li>
+            <li>consulter  les renseignements sur les RE papier.</li>
           </ul>
-          <p>Les renseignements des sept dernières années sont accessibles.</p>
+          <p>Ces renseignements  sont accessibles pour les 7 dernières années.</p>
 <ul class="list-unstyled list-inline">
 		    <li class="mrgn-bttm-sm">
 	        <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/records-of-employment-fr.html';" type="button" class="btn btn-default">Relevés d'emploi</button></li>
@@ -359,8 +360,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-          <p>Les feuillets de renseignements fiscaux (T4E) vous permettent de  vérifier et d&rsquo;imprimer les feuillets T4E des six dernières années si vous avez  reçu des prestations de l&rsquo;AE. </p>
-          <p>Grâce aux options d&rsquo;envoi des feuillets de renseignements fiscaux, vous  pouvez choisir de recevoir votre T4E par voie électronique ou par la poste.  Vous pouvez changer d&rsquo;idée par la suite et vérifier et imprimer vos T4E.</p>
+          <p>Les Feuillet de  renseignements fiscaux (T4E) vous permettent de consulter et d&rsquo;imprimer vos T4E  pour les 6 dernières années, si vous avez reçu des prestations  d&rsquo;assurance-emploi.</p>
+          <p>Les options  d&rsquo;expédition de mon feuillet de renseignements fiscaux vous permettent de  choisir de recevoir vos T4E électroniquement ou par la poste. Vous pouvez  modifier votre choix plus tard et quand même consulter et imprimer vos T4E.</p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax_Slips_T4E-fr.html';" type="button" class="btn btn-default">Feuillet de renseignements fiscaux (T4E)</button></li>
           <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax-Slips-Mailing-fr.html';" type="button" class="btn btn-default">Les options d'expédition de mon feuillet de renseignements fiscaux</button></li>
@@ -373,7 +374,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <h2 id="a1-5" class="mrgn-tp-0">Demandes antérieures&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
           </div>
-            <p>La section Demandes antérieures affiche les demandes de prestation d&rsquo;A.-E. antérieures. Vous pouvez sélectionner une demande pour des renseignements  précis, notamment le détail des versements. </p>
+            <p>Demandes antérieures  affiche vos demandes d&rsquo;assurance-emploi antérieures. Vous pouvez choisir une  demande pour en consulter des renseignements particuliers, incluant les détails  du paiement.</p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"> <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/past-claims-fr.html';" type="button" class="btn btn-default">Demandes antérieures</button></li>
 		  </ul>
@@ -386,7 +387,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-          <p>Les formulaires en ligne (Soumettre de nouveaux renseignements au sujet de ma demande) vous permettent de fournir des renseignements par voie électronique.  Cette option s&rsquo;affiche uniquement si vous avez une demande active pour certains  types de prestations. </p>
+          <p>Les formulaires en  ligne vous permettent de soumettre des renseignements électroniquement. Cette  option n&rsquo;est accessible que si votre demande est active et est restreinte à  certains genres de prestations.</p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS-fr.html';" type="button" class="btn btn-default">Formulaires en ligne (Soumettre de nouveaux renseignements au sujet de ma demande)</button></li>
 		  </ul>
@@ -399,7 +400,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-          <p>Avec la section Statut de l'accord (travailleur autonome), vous pouvez  vous inscrire, vérifier l&rsquo;état de votre accord ou mettre fin à votre accord de  travailleur autonome. </p>
+          <p>L&rsquo;état de mon entente  (travailleurs autonomes), vous permet de conclure une entente pour travailleurs  autonomes, d&rsquo;en consulter l&rsquo;état ou d&rsquo;y mettre fin.</p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/self-employed-fr.html';" type="button" class="btn btn-default">Statut de l'accord (travailleurs autonomes)</button></li>
 		  </ul>
@@ -411,7 +412,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <h2 id="a1-8" class="mrgn-tp-0">Province de résidence&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
           </div>
-            <p>La section Province de résidence sert à sélectionner la province dans  laquelle vous vivez et demandez des prestations d&rsquo;A.-E. Vous devez sélectionner  la province exacte afin d&rsquo;accéder à vos renseignements relatifs à l&rsquo;A.-E. </p>
+            <p>Province de résidence  vous permet de choisir la province dans laquelle vous résidez et demandez des prestations  d&rsquo;assurance-emploi. Choisissez la province exacte pour accéder à vos  renseignements d&rsquo;assurance-emploi.</p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/province-fr.html';" type="button" class="btn btn-default">Province de résidence</button></li>
 		  </ul>
@@ -420,11 +421,11 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
 			<div class="mrgn-tp-md header-bg">
-              <h2 id="a1-9" class="mrgn-tp-0">Les erreurs sont possibles&nbsp;</h2>
+              <h2 id="a1-9" class="mrgn-tp-0">Des erreurs, ça arrive&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-          <p>Sélectionnez Des erreurs, ça arrive pour savoir comment signaler les  erreurs et faire des modifications. </p>
+          <p>Des erreurs, ça arrive  vous permet d&rsquo;en apprendre davantage sur la manière de déclarer des erreurs et  de demander des modifications.</p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/mistakes-can-happen-fr.html';" type="button" class="btn btn-default">Des erreurs, ça arrive</button></li>
 		  </ul>
