--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -252,8 +252,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         
         <!-- List group -->
         <ul class="list-group">
-          <li class="list-group-item"><a href="#a1-1">Renseignements relatifs à votre dernière demande</a></li>
-          <li class="list-group-item"><a href="#a1-2">Visualiser/modifier mes renseignements personnels</a></li>
+          <li class="list-group-item"><a href="#a1-1">Renseignements sur votre dernière demande</a></li>
+          <li class="list-group-item"><a href="#a1-2">Visualiser ou modifier mes renseignements personnels</a></li>
           <li class="list-group-item"><a href="#a1-3">Relevés d'emploi</a></li>
           <li class="list-group-item"><a href="#a1-4">Renseignements fiscaux</a></li>
           <li class="list-group-item"><a href="#a1-5">Demandes antérieures</a></li>
@@ -294,7 +294,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <div class="mrgn-tp-md header-bg">
               <h2 id="a1-1" class="mrgn-tp-0">Renseignements sur votre dernière demande&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
-            </div>
+            </div><br />
             <p>Quand vous choisissez  Visualiser l&rsquo;état de ma demande et ma correspondance (Alertez-moi), vous pouvez  consulter l&rsquo;état de votre demande et vos derniers messages.</p>
             <p>Vous pouvez également  recevoir des avis par courriel en vous inscrivant au service Alertez-moi.</p>
             <p>Si votre demande est  active, les options Dernière demande et Renseignements de paiements affichent  des détails tels que, la date de début, le taux de prestations hebdomadaire, le  nombre de semaines payées et les détails du paiement. </p>
@@ -315,7 +315,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <div class="mrgn-tp-md header-bg">
               <h2 id="a1-2" class="mrgn-tp-0">Visualiser ou modifier mes renseignements personnels&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
-            </div>
+            </div><br />
             <p>Dans cette section,  vous pouvez consulter ou modifier votre adresse postale, numéro de téléphone,  les renseignements sur le dépôt direct et langue de préférence. <a name="4"></a>Les  changements peuvent être effectués directement dans MDSC-Assurance emploi  seulement pendant les heures de service de votre province ou territoire.</p>
 <details>
               <summary><!--Service times-->Heures d’ouverture de votre province ou territoire</summary>
@@ -373,7 +373,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		  <div class="mrgn-tp-md header-bg">
               <h2 id="a1-5" class="mrgn-tp-0">Demandes antérieures&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
-          </div>
+          </div><br />
             <p>Demandes antérieures  affiche vos demandes d&rsquo;assurance-emploi antérieures. Vous pouvez choisir une  demande pour en consulter des renseignements particuliers, incluant les détails  du paiement.</p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"> <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/past-claims-fr.html';" type="button" class="btn btn-default">Demandes antérieures</button></li>
@@ -411,7 +411,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		  <div class="mrgn-tp-md header-bg">
               <h2 id="a1-8" class="mrgn-tp-0">Province de résidence&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
-          </div>
+          </div><br />
             <p>Province de résidence  vous permet de choisir la province dans laquelle vous résidez et demandez des prestations  d&rsquo;assurance-emploi. Choisissez la province exacte pour accéder à vos  renseignements d&rsquo;assurance-emploi.</p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/province-fr.html';" type="button" class="btn btn-default">Province de résidence</button></li>
