--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -282,9 +282,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <div class="col-xs-12 col-md-9">
       <p>On this page, you  can get information on your Employment Insurance (EI) claims. You can also manage your account by:</p>
       <ul>
-        <li>updating your contact information;</li>
-        <li>modifying your direct deposit information;</li>
-        <li>registering for the email notification  service (Alert me).</li>
+        <li>updating your contact information</li>
+        <li>modifying your direct deposit information, or</li>
+        <li>registering for the email notification service (Alert me).</li>
       </ul>
       <section>
         <div class="panel panel-default">
