--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -284,7 +284,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <p>Sur cette page, vous trouverez des renseignements sur votre demande  d&rsquo;assurance-emploi. Vous pouvez également gérer votre compte, en&nbsp;:</p>
       <ul>
         <li>mettant à jour vos coordonnées</li>
-        <li>modifiant  les renseignements concernant le dépôt direct, et</li>
+        <li>modifiant  les renseignements concernant le dépôt direct, ou</li>
         <li>vous inscrivant au service d&rsquo;alertes par courriel  (Alertez-moi).</li>
       </ul>
       
