--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -343,7 +343,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <br />
           <p>Dans la section  Relevés d&rsquo;emploi (RE), vous pouvez&nbsp;:</p>
           <ul>
-            <li>consulter et imprimer les RE  électroniques;</li>
+            <li>consulter et imprimer les RE  électroniques</li>
             <li>consulter  les renseignements sur les RE papier.</li>
           </ul>
           <p>Ces renseignements  sont accessibles pour les 7 dernières années.</p>
