--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -344,7 +344,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <br />
           <p>In the Records of  employment (ROEs) section, you can:</p>
           <ul>
-            <li>check and print electronic ROEs;</li>
+            <li>check and print electronic ROEs, or</li>
             <li>check information on paper ROEs.</li>
           </ul>
           <p>This information  is available for the last 7 years.</p>
