--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -389,9 +389,10 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-          <p>eForm (Provide new information regarding my claim) allow you to submit information  electronically. This option is displayed only when you have an active claim for  certain benefit types.</p>
+          <p>eForms (Provide new information regarding my claim) allow you to submit information  electronically. This option is displayed only when you have an active claim for  certain benefit types.</p>
 <ul class="list-unstyled list-inline">
-			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html';" type="button" class="btn btn-default">eForm (Provide new information regarding my claim)</button></li>
+			<li class="mrgn-bttm-sm">
+			  <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html';" type="button" class="btn btn-default">eForms (Provide new information regarding my claim)</button></li>
 		  </ul>
         </div>
       </div>
