--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -283,8 +283,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <p>On this page, you  can get information on your Employment Insurance (EI) claims. You can also manage your account by:</p>
       <ul>
         <li>updating your contact information</li>
-        <li>modifying your direct deposit information, or</li>
-        <li>registering for the email notification service (Alert me).</li>
+        <li>modifying your direct deposit information</li>
+        <li>registering for the email notification service (Alert me)</li>
       </ul>
       <section>
         <div class="panel panel-default">
@@ -344,8 +344,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <br />
           <p>In the Records of  employment (ROEs) section, you can:</p>
           <ul>
-            <li>check and print electronic ROEs, or</li>
-            <li>check information on paper ROEs.</li>
+            <li>check and print electronic ROEs</li>
+            <li>check information on paper ROEs</li>
           </ul>
           <p>This information  is available for the last 7 years.</p>
 <ul class="list-unstyled list-inline">
