--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -284,8 +284,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <p>Sur cette page, vous trouverez des renseignements sur votre demande  d&rsquo;assurance-emploi. Vous pouvez également gérer votre compte, en&nbsp;:</p>
       <ul>
         <li>mettant à jour vos coordonnées</li>
-        <li>modifiant  les renseignements concernant le dépôt direct, ou</li>
-        <li>vous inscrivant au service d&rsquo;alertes par courriel  (Alertez-moi).</li>
+        <li>modifiant  les renseignements concernant le dépôt direct</li>
+        <li>vous inscrivant au service d&rsquo;alertes par courriel  (Alertez-moi)</li>
       </ul>
       
       <section>
@@ -343,8 +343,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <br />
           <p>Dans la section  Relevés d&rsquo;emploi (RE), vous pouvez&nbsp;:</p>
           <ul>
-            <li>consulter et imprimer les RE  électroniques, ou</li>
-            <li>consulter  les renseignements sur les RE papier.</li>
+            <li>consulter et imprimer les RE  électroniques</li>
+            <li>consulter  les renseignements sur les RE papier</li>
           </ul>
           <p>Ces renseignements  sont accessibles pour les 7 dernières années.</p>
 <ul class="list-unstyled list-inline">
