--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -320,10 +320,10 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 <details>
               <summary><!--Service times-->Hours of operation for your Province or Territory</summary>
               <ul>
-				<li><strong>Atlantic Canada:</strong> from 6:00 am to 9:00 pm Atlantic Standard Time (AST) Monday to Friday and from 6:00 am to 5:00 pm AST Saturday and Sunday.</li>
-<li><strong>Quebec:</strong> from 6:00 am to 10:00 pm Eastern Standard Time (EST) Monday to Friday and from 6:00 am to 4:30 pm EST Saturday and Sunday.</li>
-<li><strong>Ontario:</strong> from 6:00 am to 10:30 pm Eastern Standard Time (EST) Monday to Friday, from 6:00 am to 4:00 pm EST Saturday and from 7:00 am to 5:00 pm Sunday.</li>
-<li><strong>Western Canada:</strong> from 7:00 am to 10:00 pm Central Time (CT) Monday to Friday and from 7:00 am to 7:00 pm (CT) Saturday and Sunday.
+				<li><strong>Atlantic Canada:</strong> from 6 am to 9 pm Atlantic Standard Time (AST) Monday to Friday and from 6 am to 5 pm AST Saturday and Sunday.</li>
+<li><strong>Quebec:</strong> from 6 am to 10 pm Eastern Standard Time (EST) Monday to Friday and from 6 am to 4:30 pm EST Saturday and Sunday.</li>
+<li><strong>Ontario:</strong> from 6 am to 10:30 pm Eastern Standard Time (EST) Monday to Friday, from 6 am to 4 pm EST Saturday and from 7 am to 5 pm Sunday.</li>
+<li><strong>Western Canada:</strong> from 7 am to 10 pm Central Time (CT) Monday to Friday and from 7 am to 7 pm (CT) Saturday and Sunday.
 </li></ul>
             </details>
             <ul class="list-unstyled list-inline">
@@ -342,7 +342,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
           </div>
             <br />
-          <p>In the Records of  employment (ROEs) section, you can:</p>
+          <p>In the Records of  Employment (ROEs) section, you can:</p>
           <ul>
             <li>check and print electronic ROEs</li>
             <li>check information on paper ROEs</li>
@@ -425,7 +425,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
 			<div class="mrgn-tp-md header-bg">
-              <h2 id="a1-9" class="mrgn-tp-0">Mistakes can Happen</h2>
+              <h2 id="a1-9" class="mrgn-tp-0">Mistakes can happen</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
