--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -322,7 +322,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <ul>
 				<li><strong>Canada atlantique:</strong> de 6 h à 21 h, heure normale de l'Atlantique (HNA), du lundi au vendredi et de 6 h à 17 h HNA le samedi et le dimanche. </ li>
 <li><strong> Québec:</strong> de 6 h à 22 h, heure normale de l'Est (HNE) du lundi au vendredi et de 6 h à 16 h 30 HNE le samedi et le dimanche. </ li >
-<li><strong> Ontario:</strong> de 6 h à 22 h 30 HNE du lundi au vendredi, de 6 h à 16 h HNE le samedi et de 7 h à 17 h le dimanche. </li>
+<li><strong> Ontario:</strong> de 6 h à 22 h 30 HNE du lundi au vendredi et de 6 h à 16 h HNE le samedi et de 7 h à 17 h le dimanche. </li>
 <li><strong> Ouest canadien:</strong> de 7 h à 22 h, heure du Centre (CT) du lundi au vendredi et de 7 h à 19 h CT le samedi et le dimanche.</li></ul>
             </details>
             <ul class="list-unstyled list-inline">
