--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -322,8 +322,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <ul>
 				<li><strong>Atlantic Canada:</strong> from 6 am to 9 pm Atlantic Standard Time (AST) Monday to Friday and from 6 am to 5 pm AST Saturday and Sunday.</li>
 <li><strong>Quebec:</strong> from 6 am to 10 pm Eastern Standard Time (EST) Monday to Friday and from 6 am to 4:30 pm EST Saturday and Sunday.</li>
-<li><strong>Ontario:</strong> from 6 am to 10:30 pm Eastern Standard Time (EST) Monday to Friday, from 6 am to 4 pm EST Saturday and from 7 am to 5 pm Sunday.</li>
-<li><strong>Western Canada:</strong> from 7 am to 10 pm Central Time (CT) Monday to Friday and from 7 am to 7 pm (CT) Saturday and Sunday.
+<li><strong>Ontario:</strong> from 6 am to 10:30 pm EST Monday to Friday, from 6 am to 4 pm EST Saturday and from 7 am to 5 pm Sunday.</li>
+<li><strong>Western Canada:</strong> from 7 am to 10 pm Central Time (CT) Monday to Friday and from 7 am to 7 pm CT Saturday and Sunday.
 </li></ul>
             </details>
             <ul class="list-unstyled list-inline">
