--- a/scenarioA/services/my-account/chooser-page.html
+++ b/scenarioA/services/my-account/chooser-page.html
@@ -211,13 +211,13 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 <div class="col-md-6">
 	<div class="alert alert-info hght-inhrt mrgn-bttm-0">
 	<h2 class="h3">Sign in with your province:</h2>	
-	<p>Alberta and British Columbia residents can access My Service Canada Account using their provincial digital ID (<a href="/en/employment-social-development/services/my-account/privacy-notice-term-conditions.html">MyAlberta Digital ID</a>, <a href="#">BC Services Card</a>) </p>
+	<p>Alberta and British Columbia residents can access My Service Canada Account using their provincial digital ID (<a href="/MSCA-Prototype/scenarioA/services/my-account/province/privacy-notice-term-conditions.html">MyAlberta Digital ID</a>, <a href="#">BC Services Card</a>) </p>
 	</div>
 </div>	
 		
 <aside class="col-xs-12 col-md-6">
 	<div class="clearfix mrgn-bttm-md visible-xs visible-sm"></div>
-	<div class="well well-sm small brdr-0 hght-inhrt mrgn-bttm-0"><h2 class="mrgn-tp-0 h3">Ask our Chatbot!</h2><p>Our Chatbot pilot can guide you with general questions about MSCA. It cannot check the status of your application(s) or be used to submit complaints.</p><p><a href="/en/employment-social-development/corporate/portfolio/service-canada/improving-services/scc-tou.html">Terms of Use and Information Statement</a></p><button id="sccChatBtn" class="btn btn-lg btn-primary scc-chat-btn scc-chat-btn-add">Launch chatbot</button></div><div id="sccChat"></div>
+	<div class="well well-sm small brdr-0 hght-inhrt mrgn-bttm-0"><h2 class="mrgn-tp-0 h3">Ask our Chatbot!</h2><p>Our Chatbot pilot can guide you with general questions about MSCA. It cannot check the status of your application(s) or be used to submit complaints.</p><p><a href="">Terms of Use and Information Statement</a></p><button id="sccChatBtn" class="btn btn-lg btn-primary scc-chat-btn scc-chat-btn-add">Launch chatbot</button></div><div id="sccChat"></div>
 </aside>		
 </div>	
 	<p>My Service Canada Account (MSCA) is a secure online portal that lets you apply, view and update your information for Employment Insurance (EI), Canada Pension Plan (CPP) and Old Age Security (OAS).</p>
@@ -333,9 +333,9 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 <section>
 <h2>What you can do in <abbr>MSCA</abbr></h2>
 <ul>
-	<li><a href="/en/employment-social-development/employment-social-development/msca-test/ei-services.html">Employment Insurance services</a></li>
-	<li><a href="/en/employment-social-development/employment-social-development/msca-test/cpp-oas.html">Canada Pension Plan and Old Age Security services</a></li>
-	<li><a href="/en/employment-social-development/employment-social-development/msca-test/tax-information.html">Tax Information</a></li>
+	<li><a href="">Employment Insurance services</a></li>
+	<li><a href="">Canada Pension Plan and Old Age Security services</a></li>
+	<li><a href="">Tax Information</a></li>
 </ul>
 </section>
 
@@ -344,10 +344,10 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 <p>Contact the following programs with any questions you may have:</p>
 
 <ul class="text-center list-unstyled colcount-md-4">
-	<li class="brdr-rght"><a href="https://www.canada.ca/en/employment-social-development/corporate/contact/sin.html">Contact Social Insurance Number (SIN)</a></li>
-	<li class="brdr-rght"><a href="https://www.canada.ca/en/employment-social-development/corporate/contact/ei-individual.html">Contact Employment Insurance (EI)</a></li>
-	<li class="brdr-rght"><a href="https://www.canada.ca/en/employment-social-development/corporate/contact/cpp.html">Contact Canada Pension Plan (CPP)</a></li>
-	<li><a href="https://www.canada.ca/en/employment-social-development/corporate/contact/oas.html">Contact Old Age Security (OAS)</a></li>
+	<li class="brdr-rght"><a href="">Contact Social Insurance Number (SIN)</a></li>
+	<li class="brdr-rght"><a href="">Contact Employment Insurance (EI)</a></li>
+	<li class="brdr-rght"><a href="">Contact Canada Pension Plan (CPP)</a></li>
+	<li><a href="">Contact Old Age Security (OAS)</a></li>
 </ul>
 </section>
      
