--- a/scenarioA/services/my-account/chooser-page.html
+++ b/scenarioA/services/my-account/chooser-page.html
@@ -211,7 +211,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 <div class="col-md-6">
 	<div class="alert alert-info hght-inhrt mrgn-bttm-0">
 	<h2 class="h3">Sign in with your province:</h2>	
-	<p>Alberta and British Columbia residents can access My Service Canada Account using their provincial digital ID (<a href="/MSCA-Prototype/scenarioA/services/my-account/province/privacy-notice-term-conditions.html">MyAlberta Digital ID</a>, <a href="#">BC Services Card</a>) </p>
+	<p>Alberta and British Columbia residents can access My Service Canada Account using their provincial digital ID (<a href="/MSCA-Prototype/scenarioA/services/my-account/province/privacy-notice-term-conditions.html">MyAlberta Digital ID</a>, <a href="#">BC Services Card</a>) </p><br /><br />
 	</div>
 </div>	
 		
