--- a/scenarioA/services/my-account/chooser-page.html
+++ b/scenarioA/services/my-account/chooser-page.html
@@ -211,7 +211,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 <div class="col-md-6">
 	<div class="alert alert-info hght-inhrt mrgn-bttm-0">
 	<h2 class="h3">Sign in with your province:</h2>	
-	<p>Alberta and British Columbia residents can access My Service Canada Account using their provincial digital ID (<a href="/MSCA-Prototype/scenarioA/services/my-account/province/privacy-notice-term-conditions.html">MyAlberta Digital ID</a>, <a href="#">BC Services Card</a>) </p><br /><br />
+	<p>Alberta and British Columbia residents can access My Service Canada Account using their provincial digital ID (<a href="/MSCA-Prototype/scenarioA/services/my-account/province/privacy-notice-term-conditions.html">MyAlberta Digital ID</a>, <a href="#">BC Services Card</a>) </p><br /><br /><br />
 	</div>
 </div>	
 		
@@ -254,7 +254,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 	
 	<li class="col-md-4">
 		<a href="/MSCA-Prototype/scenarioA/services/my-account/province/index.html" class="btn btn-lblue large-btn">
-			<div class="icon-btn"><img src="/MSCBA-Prototype-NoNav/province-white.png" alt=""></div>
+			<div class="icon-btn"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/Province-white.png" alt=""></div>
 			<div class="label-btn"><b>Sign in  with your province*</b></div>
 		</a>		
 		<p>Use your provincial digital ID.</p>
@@ -290,7 +290,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 	
 	<li class="col-md-4 mrgn-bttm-md">
 		<a href="MSCA-Prototype/scenarioA/services/my-account/province/index.html" class="btn btn-lblue large-btn">
-			<div class="icon-btn"><img src="/MSCBA-Prototype-NoNav/province-white.png" alt=""></div>
+			<div class="icon-btn"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/Province-white.png" alt=""></div>
 			<div class="label-btn"><b>Register with your province</b></div>
 		</a>		
 	</li>
