--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -402,7 +402,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <br />
           <p>L&rsquo;état de mon entente  (travailleurs autonomes), vous permet de conclure une entente pour travailleurs  autonomes, d&rsquo;en consulter l&rsquo;état ou d&rsquo;y mettre fin.</p>
 <ul class="list-unstyled list-inline">
-			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/self-employed-fr.html';" type="button" class="btn btn-default">Statut de l'accord (travailleurs autonomes)</button></li>
+			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/self-employed-fr.html';" type="button" class="btn btn-default">L’état de mon entente (travailleurs autonomes)</button></li>
 		  </ul>
         </div>
       </div>
