--- a/scenarioA/services/my-account/R&A/create-my-profile.html
+++ b/scenarioA/services/my-account/R&A/create-my-profile.html
@@ -328,7 +328,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 </fieldset>
 	  
 					
-			
+			</section>		
 	
 	
 <section>
@@ -602,4 +602,4 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 
     </body>
 </html>
- 
+
