--- a/scenarioA/services/my-account/R&A/create-my-profile.html
+++ b/scenarioA/services/my-account/R&A/create-my-profile.html
@@ -346,16 +346,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 <div class="form-group">
 <label for="sq1">Question 1</label>
 <select id="sq1" name="sq1" class="form-control">
-<option value="40" >What was the make of your first car?</option>
-<option value="15" >What is your maternal grandmother's first name?</option>
-<option value="9" >What is your paternal grandfather's first name?</option>
-<option value="34" >What was your favourite subject in school?</option>
-<option value="44" >What is your favourite video game?</option>
-<option value="32" >Who is your favourite cartoon character?</option>
-<option value="8" >Who was the band/star of the first concert you attended?</option>
-<option value="22" >Who was your most memorable school teacher?</option>
-<option value="47" >What was your favourite game as a child?</option>
-<option value="20" >What was the name of your favourite superhero as a child?</option>
+<option value="40" >Who was your most memorable school teacher?
+</option>
+
 </select>
 
 <label for="sa1">Answer</label><input type="text" id="sa1" name="sa1" class="form-control" value="" maxlength="100" size="48" autocomplete="off"/>
@@ -364,16 +357,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 <div class="form-group">
 <label for="sq2">Question 2</label>
 <select id="sq2" name="sq2" class="form-control">
-<option value="31" >What is the first name of the person you went to your prom with?</option>
-<option value="29" >What is your favourite chocolate bar?</option>
-<option value="42" >Who is your favourite person from history?</option>
-<option value="14" >What is your favourite fictional character?</option>
-<option value="37" >What was the first name of your first roommate?</option>
-<option value="10" >What is the first name of the best man at your wedding?</option>
-<option value="11" >What was the first name of your first love?</option>
-<option value="21" >Who was your favourite athlete as a child?</option>
-<option value="13" >What is the first name of your oldest cousin?</option>
-<option value="3" >Where did you first meet your significant other?</option>
+<option value="31" >What was the make of your first car?
+</option>
+
 </select>
 
 <label for="sa2">Answer</label><input type="text" id="sa2" name="sa2" class="form-control" value="" maxlength="100" size="48" autocomplete="off"/>
@@ -382,16 +368,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 <div class="form-group">
 <label for="sq3">Question 3</label>
 <select id="sq3" name="sq3" class="form-control">
-<option value="38" >Who is your favourite author?</option>
-<option value="24" >In what city or town did your mother and father meet?</option>
-<option value="33" >In which city or town was your father born?</option>
-<option value="28" >What was the first name of your first manager (boss)?</option>
-<option value="23" >What is the first name of your mother's oldest sibling?</option>
-<option value="12" >What was the first name of your childhood best friend?</option>
-<option value="1" >What was the destination of your first trip outside Canada?</option>
-<option value="26" >What is the first name of your oldest niece?</option>
-<option value="41" >In which city or town was your mother born?</option>
-<option value="43" >What is the middle name of your oldest sibling?</option>
+<option value="38" >What is the first name of your oldest niece?
+</option>
+
 </select>
 
 <label for="sa3">Answer</label><input type="text" id="sa3" name="sa3" class="form-control" value="" maxlength="100" size="48" autocomplete="off"/>
@@ -400,16 +379,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 <div class="form-group">
 <label for="sq4">Question 4</label>
 <select id="sq4" name="sq4" class="form-control">
-<option value="30" >What is your favourite holiday destination?</option>
-<option value="18" >What was the first movie or play that you attended?</option>
-<option value="50" >What is the name of your first pet?</option>
-<option value="46" >How old was your father when you were born? (Answer in words, e.g., twenty-six)</option>
-<option value="17" >What is your favourite charity?</option>
-<option value="2" >What was your favourite toy as a child?</option>
-<option value="25" >When is your wedding anniversary? (Month & "Year", e.g., May 1995)</option>
-<option value="36" >What is your spouse's/partner's middle name?</option>
-<option value="45" >What is your oldest sibling's nickname?</option>
-<option value="5" >Which magazine do you read most often?</option>
+<option value="30" >Which magazine do you read most often?
+</option>
+
 </select>
 
 <label for="sa4">Answer</label><input type="text" id="sa4" name="sa4" class="form-control" value="" maxlength="100" size="48" autocomplete="off"/>
@@ -418,16 +390,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 <div class="form-group">
 <label for="sq5">Question 5</label>
 <select id="sq5" name="sq5" class="form-control">
-<option value="27" >What is the first name of your father's oldest sibling?</option>
-<option value="19" >Where did you go for your honeymoon?</option>
-<option value="48" >What is your favourite hobby?</option>
-<option value="4" >What is your favourite meal?</option>
-<option value="16" >What is your father's middle name?</option>
-<option value="6" >What is your mother's middle name?</option>
-<option value="39" >What is the first musical instrument you ever played?</option>
-<option value="35" >What is the first name of your oldest nephew?</option>
-<option value="7" >What is your favourite movie?</option>
-<option value="49" >What is your favourite sport?</option>
+<option value="27" >Who was your favourite athlete as a child?
+</option>
+
 </select>
 
 <label for="sa5">Answer</label><input type="text" id="sa5" name="sa5" class="form-control" value="" maxlength="100" size="48" autocomplete="off"/>
